Fix mobile horizontal scrollbar
Change background decoration
Change pfp as img element instead of div background
Fix pfp overflow on smaller browser window
Crop Admin Dashboard screenshot for consistency
Minor css fixes

--- a/src/style.css
+++ b/src/style.css
@@ -18,13 +18,18 @@
     box-sizing: border-box;
 }
 
+html,
+body {
+    overflow-x: hidden;
+    width: 100%;
+}
+
 body {
     font-family: "Roboto";
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow-x: hidden;
 }
 
 h1,
@@ -38,30 +43,35 @@ h2 {
     font-size: 2rem;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 a {
     text-decoration: none;
     color: #000;
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 0 3rem;
+    overflow: hidden;
 }
 
-.bio::before {
+main::before {
     content: "";
-    width: 2300px;
-    height: 500px;
+    width: 100vw;
+    height: 100%;
     background-color: var(--bg-color);
     position: absolute;
     z-index: -1;
-    top: -300px;
-    left: -200px;
-    transform: rotate(-15deg);
+    top: -60%;
+    transform: skew(0, -15deg);
     -webkit-box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.64);
     -moz-box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.64);
     box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.64);
@@ -71,7 +81,7 @@ a {
     margin-top: 100px;
     display: flex;
     background: white;
-    gap: 1.5rem;
+    gap: 5rem;
     -webkit-box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.64);
     -moz-box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.64);
     box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.64);
@@ -89,20 +99,20 @@ a {
 .pfp {
     width: 300px;
     height: 300px;
-    background-image: url(./images/pfp.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    transform-origin: right;
     transform: scale(1.4);
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.64);
+}
+
+.pfp img {
+    width: 100%;
+    height: 100%;
 }
 
 .pfp h1 {
     width: 300px;
     color: white;
     position: relative;
-    top: 250px;
+    top: -50px;
     text-align: center;
     font-size: 2.5rem;
 }
@@ -136,11 +146,6 @@ a {
 .project {
     min-height: 400px;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.64);
-}
-
-.project-screenshot {
-    width: 100%;
-    height: auto;
 }
 
 .project-links {
@@ -212,13 +217,16 @@ footer {
     .bio {
         gap: 0px;
     }
+    .bio-info {
+        transform: translateX(-2rem);
+    }
     .pfp {
         max-width: 300px;
         transform-origin: bottom right;
         transform: scale(1) translate(-20%, -30%);
     }
     .pfp h1 {
-        top: 15px;
+        top: -290px;
         left: 300px;
     }
     .social-links {
@@ -246,18 +254,19 @@ footer {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 1rem;
+        gap: 2rem;
+    }
+    .bio-info {
+        justify-content: center;
+        align-items: center;
+        transform: translateX(0);
     }
     .pfp {
         transform: scale(1);
     }
     .pfp h1 {
         left: 0;
-        top: 250px;
-    }
-    .bio-info {
-        justify-content: center;
-        align-items: center;
+        top: -50px;
     }
     .social-links {
         display: flex;
